# VkBoost

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  compile_commands.json  meson.build
include/: pipeline.hpp  shader_compiler.hpp  sync.hpp
include/vk_boost/: buffer.hpp  shader_compiler.hpp  sync.hpp  vk_shader.hpp
include/vk_deck/: boost.hpp  buffer.hpp  deck.hpp  dynamic_rendering.hpp  imgui.hpp  pipeline.hpp  shader_compiler.hpp  sync.hpp  vk_shader.hpp
include/vkxtra/: buffer.hpp  commands.h  dynamic_rendering.hpp  imgui.hpp  pipeline.hpp  shader_compiler.hpp  sync.hpp  vk_shader.hpp  xtra.hpp
shaders/: compiled_shaders.ini  shader.vert
src/: buffer.cpp  commands.cpp  dynamic_rendering.cpp  imgui.cpp  main.cpp  pipeline.cpp  shader_compiler.cpp  sync.cpp  vk_shader.cpp
tests/: main.cpp  pipeline_test.cpp
